cleaning up index

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             <li><a href="#flow">AGENDA</a></li>                    
                             <li><a href="#team">TEAM</a></li>
                             <!--<li><a href="#faq">FAQ</a></li>-->
-                            <li><a href="#register" style="color:#4abd92;">REGISTER</a></li>
+                            <li><a href="#register" style="color:#4abd92;">REGISTER NOW</a></li>
                         </ul>
                         <div class="clear"></div>
                     </div>      
@@ -75,7 +75,7 @@
                           <p class="info top-30">Saturday, July 26th | One-day Conference | San Jose, California</p>                          
 
                           <div class="top-150">
-                              <a href="#register" class="button green slow-scroll">Register Today</a>
+                              <a href="#register" class="button green slow-scroll">Register Now</a>
                           </div>
 
                       </center>
@@ -298,7 +298,7 @@
             </div>
             
             <div class="top-60">
-                <center><a href="#register" class="button green slow-scroll">Register Today</a></center>
+                <center><a href="#register" class="button green slow-scroll">Register Now</a></center>
             </div>
             <div class="clear"></div>   
             
@@ -483,7 +483,7 @@
     <!--END OF EVENTBRITE TICKET PAGE-->         
 
 </div>
-<div class="full_width">
+<!--<div class="full_width">
     <div class="about_slider_background">
         <div class="testimonial_slider_holder slider_holder">
             <div class="testimonial-top-line"></div>
@@ -529,7 +529,7 @@
         </li>       
     </ul>
     <div id="testimonial_pager" class="carousel_pagination left"></div>
-    <div class="clear"></div>
+    <div class="clear"></div>-->
 </div>
 </div>  
 
