cleaning up reg and index

--- a/index.html
+++ b/index.html
@@ -288,6 +288,13 @@
                 <ul class="date-author-likes-holder bottom-20"><li class="date">Founder & CTO, Rockmelt; VP of Engineering, Yahoo!</li></ul>
                 Tim is an entrepreneur and computer scientist. His last company, Rockmelt, was purchased by Yahoo, where Tim is currently VP of Engineering for Mobile and Emerging Products. <a href="tim-howes.html">Learn More</a>
             </div>
+
+            <div class="one_half last">
+                <img src="images/more-speakers.jpg" alt="">
+                <h1 class="single-blog-title montserrat-font top-20">MORE TO COME</h1>
+                We're currenlty locking in a few more speakers. Once we have a green light we'll be sure to annouce. 
+            </div>
+            <div class="clear"></div>
             
             <div class="top-60">
                 <center><a href="#register" class="button green slow-scroll">Register Now</a></center>
@@ -451,16 +458,30 @@
 <div id="register" class="clear about section block">
     <div class="block content-960 center-relative"> 
         <h2 class="section-title montserrat-font">BUY</br>TICKETS</h2>
-        <div class="title-separator"></div>       
-    <div class="two_third top-80">
-        <p>Saturday, July 26, 2014 2-6PM</p>
-        <p>South Bay Church, 1180 Murphy Ave, San Jose, CA</p>
-        <p>ELEO Conference is a one-day conference in Silicon Valley. Come hear from entrepreneurs, CEOs and VCs about what it takes to lead a company.</p>
-        <p>General Admission is $50, with $25 early bird pricing until 6/15/2014.</p>
-    </div>
-        <div class="top-150">   
+        <div class="title-separator"></div> 
+
+        <div class="one_half top-80">  
+
+            <div class="pricing-holder">                                            
+                <div class="pricing-header">
+                    <p><b>EARLY BIRD DISCOUNT</b></p>
+                </div>
+                <div class="pricing-content">
+                    <p class="top-50 bottom-50" style="font-weight: bold; color: #4abd92; font-size: 5EM;">$25</p>
+                    <p>General Admission early bird pricing until June 15th.</p>
+                </div>
+            </div>
           <a target="_top" href="#eventbrite"  class="button green" rel="prettyPhoto">Purchase Tickets</a>
-      </div>
+        </div>      
+        <div class="one_half last top-80">
+            <p style="font-size:1.6em;">Saturday, July 26, 2014</p>
+            <p style="font-size:1.6em;">2-6PM</p>
+            <p>South Bay Church, 1180 Murphy Ave, San Jose, CA</p>
+            <br />
+            <p>ELEO Conference is a one-day conference in Silicon Valley. Come hear from entrepreneurs, CEOs and VCs about what it takes to lead a company.</p>
+        </div>
+        
+      <div class="clear"></div>
 
       <!--START OF EVENTBRITE TICKET PAGE HTML -->
       <div id="eventbrite" class="hide" style="width:100%; text-align:left; display:none" >
@@ -471,8 +492,12 @@
             <span style="color:#ddd;">through</span> 
             <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com?ref=etckt">Eventbrite</a>
         </div>
+        </div>
     </div>
     <!--END OF EVENTBRITE TICKET PAGE-->         
+
+</div>
+<div class="full_width map">
 
 </div>
 <!--<div class="full_width">
