cleaning up index

--- a/index.html
+++ b/index.html
@@ -560,16 +560,15 @@
     <div class="block content-960 center-relative"> 
         <h2 class="section-title montserrat-font">THE CREW</h2>
         <div class="title-separator"></div>                     
-        <p class="info">Inspiring and Equipping Entrepreneurs to Lead</p>       
-
+        
         <div class="two_third top-80">
-            ELEO is defined as the intersection between entrepreneurship and leadership. We want to meet you there. While being an entrepreneur is an innate skill, being a natural leader may not be. 
-        </br>
-    </br>
-    Most conferences for entrepreneurs in the Bay Area revolve around funding, getting noticed, and the X's and O's of running a company. We believe that at the core of every successful venture, is great leadership.
+            ELEO is organized and run by a group of entrepreneurs and business leaders who attend South Bay Church in San Jose. We are passionate about connecting with other entrepreneurs and leaders from around the Valley. Our mission is to inspire and equip entrepreneurs to be more effective leaders in their organizations. 
+            </br>
+            </br>
+            ELEO was started as a small gathering of entrepreneurs during the summer of 2012. It's since grown into a bi-weekly meetup and an annual conference. It is run as a non-profit organization and all proceeds above and beyond our own operating costs are donated to Watsi to fund medical treatments in third world countries.
 </div>
 <div class="one_third last big-about-font top-80">
-    I do this because I love serving this community."
+    "I do this because I love serving this community."
 </div>
 <div class="clear"></div>
 
@@ -594,28 +593,28 @@
 <div class="one_fourth last">
     <img src="images/mike.jpg">
     <h2 class="external-subtitles montserrat-font">MIKE LOUIE</h2>
-    <span style="font-size:13px;">Marketing Guru</br><a style="color:#4abd92; text-decoration:none;" href="https://twitter.com/robertoortiz"><b>@robertoortiz</b></a></span>
+    <span style="font-size:13px;">Marketing Guru</br></span>
 </div>
 <div class="clear"></div>
 <div class="one_fourth">
     <img src="images/lindsey.jpg">
     <h2 class="external-subtitles montserrat-font">LINDSEY OH</h2>
-    <span style="font-size:13px;">Volunteer Coordinator</br><a style="color:#4abd92; text-decoration:none;" href="https://twitter.com/robertoortiz"><b>@robertoortiz</b></a></span>
+    <span style="font-size:13px;">Volunteer Coordinator</br></span>
 </div>  
 <div class="one_fourth">
     <img src="images/adrienne.jpg">
     <h2 class="external-subtitles montserrat-font">ADRIENNE SHEN</h2>
-    <span style="font-size:13px;">ELEO MC</br><a style="color:#4abd92; text-decoration:none;" href="https://twitter.com/robertoortiz"><b>@robertoortiz</b></a></span>
+    <span style="font-size:13px;">ELEO MC</br><a style="color:#4abd92; text-decoration:none;" href="https://twitter.com/shenventure"><b>@shenventure</b></a></span>
 </div>
 <div class="one_fourth">
     <img src="images/mark.jpg">
     <h2 class="external-subtitles montserrat-font">MARK MAO</h2>
-    <span style="font-size:13px;">Sponsorships</br><a style="color:#4abd92; text-decoration:none;" href="https://twitter.com/robertoortiz"><b>@robertoortiz</b></a></span>
+    <span style="font-size:13px;">Sponsorships</br></span>
 </div>
 <div class="one_fourth last">
     <img src="images/wandia.jpg">
     <h2 class="external-subtitles montserrat-font">WANDIA CHIURI</h2>
-    <span style="font-size:13px;">Communications</br><a style="color:#4abd92; text-decoration:none;" href="https://twitter.com/robertoortiz"><b>@robertoortiz</b></a></span>
+    <span style="font-size:13px;">Communications</br><a style="color:#4abd92; text-decoration:none;" href="https://twitter.com/wandia_info"><b>@wandia_info</b></a></span>
 </div>
 <div class="clear"></div>       
 </div>  
