minor changes on index

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               <!--about-->
               <div id="about" class="clear services section block">
                  <div class="block content-960 center-relative">  
-                    <h2 class="section-title montserrat-font">ABOUT US</h2>
+                    <h2 class="section-title montserrat-font">ABOUT</h2>
                     <div class="title-separator"></div>                     
                     <div class="one_half top-20">
                         <p class="info bottom-20">Inspiring and Equipping Entrepreneurs to Lead</p>
@@ -620,7 +620,7 @@
     <span style="font-size:13px;">Communications</br><a style="color:#4abd92; text-decoration:none;" href="https://twitter.com/wandia_info"><b>@wandia_info</b></a></span>
 </div>
 <div class="clear"></div>  
-
+<!--
 <div class="one_fourth">
     <img src="images/adrienne.jpg">
     <h2 class="external-subtitles montserrat-font">EUGENE MIN</h2>
@@ -631,7 +631,7 @@
     <h2 class="external-subtitles montserrat-font">RICK LAPOINTE</h2>
     <span style="font-size:13px;">Something Cool</br></span>
 </div>
-<div class="clear"></div>      
+<div class="clear"></div>  -->    
 </div>  
 
 </div>  
