added mike's feedback to the site

--- a/andy-wood.html
+++ b/andy-wood.html
@@ -46,7 +46,7 @@
                     </div>
 
                     <div class="two_third last bottom-100" style="font-weight:normal;">                        
-                    Andy and his wife, Stacie, along with 3 other families moved to California to start South Bay Church in 2009 with a dream of impacting the Silicon Valley with God's love. Currently, South Bay Church has a campus in Sunnyvale and North San Jose and reaches over 1,600 people per week. Andy and Stacie have been married for 11 years and have two sons, Caedmon (7) and Sammy (6) and one daughter, Karis (6months). Andy is passionate about training leaders, teaching the message of Jesus in relevant ways, and doing church in a way that resonates with who people who don't typically enjoy church.
+                    Andy and his wife, Stacie, along with 3 other families moved to California to start South Bay Church in 2009 with a dream of impacting the Silicon Valley with God's love. Currently, South Bay Church has a campus in Sunnyvale and North San Jose and reaches over 1,600 people per week. Andy and Stacie have been married for 11 years and have two sons, Caedmon (7) and Sammy (6) and one daughter, Karis (6 months). Andy is passionate about training leaders, teaching the message of Jesus in relevant ways, and doing church in a way that resonates with who people who don't typically enjoy church.
                     </div>
 
 
