minor word changes

--- a/index.html
+++ b/index.html
@@ -784,7 +784,7 @@
 
 <div class="fixed-block">
                         <div class="morph-button morph-button-inflow morph-button-inflow-2">
-                            <button type="button"><span>Share this site</span></button>
+                            <button type="button"><span>Share this event</span></button>
                             <div class="morph-content">
                                 <div>
                                     <div class="content-style-social">
