--- a/index.html
+++ b/index.html
@@ -562,8 +562,8 @@
             ELEO was started as a small gathering of entrepreneurs during the summer of 2012. It's since grown into a bi-weekly meetup and an annual conference. It is run as a non-profit organization and all proceeds above and beyond our own operating costs are donated to Watsi to fund medical treatments in third world countries.
 </div>
 <div class="one_third last big-about-font top-80">
-    "We do this because we love serving this community."<br/>
-    - ELEO Team
+    We do this because we love serving this community."<br/>
+    <span style="font-size:18px">ELEO TEAM</span>
 </div>
 <div class="clear"></div>
 
