slight mods to team sarea and nav bar

--- a/david-lane.html
+++ b/david-lane.html
@@ -35,7 +35,7 @@
             <!--Single Post-->
             <div class="clear block">	
                 <div class="block content-960 center-relative">
-                <a href="index.html#speakers"><img src="images/x.png" style="position: fixed;top: 0; border:none; right: 0;"></a>
+                <a href="index.html#speakers"><img src="images/x.png" class="close-x"></a>
                 <div class=" top-50 bottom-20" style="text-align:right;"><a href="andy-wood.html" class="button green slow-scroll"><</a><a href="victor-ho.html" class="button green slow-scroll" style="border-left:none;">></a></div>
 
                     <div class="one_third">
