--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                 <div id="main-menu" class="main-menu" style="display:none;">        
                     <div class="center-relative menu-holder">
                         <div class="menu-logo left"><img src="images/eleo-logo.png" alt="Sensa"/></div>
+                        <span class="year">2014</span>
                         <ul class="right montserrat-font">
                             <li><a href="#about">ABOUT</a></li>
                             <li><a href="#speakers">SPEAKERS</a></li>
@@ -558,13 +559,13 @@
 </div>
 <div class="clear"></div>
 
-<!--
+
 <div class="one_half team">
     <div class="team-pic"><span class="tweet"></span><img src="images/roberto.jpg" alt=""></div>
     <div class="team-info">
         <h2 class="external-subtitles montserrat-font">ROBERTO ORTIZ</h2>
         <span style="font-size:13px; display:block; margin:0 0 12px; line-height:15px;">Co-founder & Creative Director</span>
-        <span class="snippet">Place a sentence here to add personality and fun to this section, here's a little more.</span>
+        <span class="snippet">Gains +10 in charisma with his beard while he helps lead mobile design at Yahoo.</span>
             <div class="small-social">
                 <a href="#"><img src="images/twitter-small.png" alt=""></a>       
             </div>
@@ -574,10 +575,10 @@
     <div class="team-pic"><span class="tweet"></span><img src="images/jerry.jpg" alt=""></div>
     <div class="team-info">
         <h2 class="external-subtitles montserrat-font">JERRY SHEN</h2>
-        <span style="font-size:13px; display:block; margin:0 0 12px; line-height:15px;">Co-founder & Creative Director</span>
-        <span class="snippet">Place a sentence here to add personality and fun to this section, here's a little more.</span>
+        <span style="font-size:13px; display:block; margin:0 0 12px; line-height:15px;">Co-founder</span>
+        <span class="snippet">Jerry's company was acquired last year and now (legally) hacks Yahoo Fantasy Sports Apps.</span>
             <div class="small-social">
-                <a href="#"><img src="images/twitter-small.png" alt=""></a>       
+                <a href="https://twitter.com/bignoggins"><img src="images/twitter-small.png" alt=""></a>       
             </div>
     </div>
 </div>
@@ -587,10 +588,10 @@
     <div class="team-pic"><span class="tweet"></span><img src="images/charlena.jpg" alt=""></div>
     <div class="team-info">
         <h2 class="external-subtitles montserrat-font">CHARLENA ORTIZ</h2>
-        <span style="font-size:13px; display:block; margin:0 0 12px; line-height:15px;">Co-founder & Creative Director</span>
-        <span class="snippet">Place a sentence here to add personality and fun to this section, here's a little more.</span>
+        <span style="font-size:13px; display:block; margin:0 0 12px; line-height:15px;">Co-founder and Coordinator</span>
+        <span class="snippet">Charlena lives and breathes her mission in empowering women and their businesses.</span>
             <div class="small-social">
-                <a href="#"><img src="images/twitter-small.png" alt=""></a>       
+                <a href="http://www.twitter.com/charlenaortiz "><img src="images/twitter-small.png" alt=""></a>       
             </div>
     </div>
 </div>
@@ -598,89 +599,74 @@
     <div class="team-pic"><span class="tweet"></span><img src="images/mike.jpg" alt=""></div>
     <div class="team-info">
         <h2 class="external-subtitles montserrat-font">MIKE LOUIE</h2>
-        <span style="font-size:13px; display:block; margin:0 0 12px; line-height:15px;">Co-founder & Creative Director</span>
-        <span class="snippet">Place a sentence here to add personality and fun to this section, here's a little more.</span>
+        <span style="font-size:13px; display:block; margin:0 0 12px; line-height:15px;">Marketing Director</span>
+        <span class="snippet">Often mistaken for an intern, Mike manages employee communications at VMware.</span>
             <div class="small-social">
-                <a href="#"><img src="images/twitter-small.png" alt=""></a>       
+                <a href="http://www.twitter.com/mewie"><img src="images/twitter-small.png" alt=""></a>       
             </div>
     </div>
 </div>
 <div class="clear"></div>
 
 <div class="one_half team">
-    <div class="team-pic"><span class="tweet"></span><img src="images/wandia.jpg" alt=""></div>
-    <div class="team-info">
-        <h2 class="external-subtitles montserrat-font">WANDIA CHIURI</h2>
-        <span style="font-size:13px; display:block; margin:0 0 12px; line-height:15px;">Co-founder & Creative Director</span>
-        <span class="snippet">Place a sentence here to add personality and fun to this section, here's a little more.</span>
-            <div class="small-social">
-                <a href="#"><img src="images/twitter-small.png" alt=""></a>       
-            </div>
-    </div>
-</div>
-<div class="one_half team last">
     <div class="team-pic"><span class="tweet"></span><img src="images/adrienne.jpg" alt=""></div>
     <div class="team-info">
         <h2 class="external-subtitles montserrat-font">ADRIENNE SHEN</h2>
-        <span style="font-size:13px; display:block; margin:0 0 12px; line-height:15px;">Co-founder & Creative Director</span>
-        <span class="snippet">Place a sentence here to add personality and fun to this section, here's a little more.</span>
+        <span style="font-size:13px; display:block; margin:0 0 12px; line-height:15px;">ELEO MC</span>
+        <span class="snippet">Do not be fooled by this woman's smile or smooth talking - she will crush you in a game of Halo.</span>
+    </div>
+</div>
+<div class="one_half team last">
+    <div class="team-pic"><span class="tweet"></span><img src="images/wandia.jpg" alt=""></div>
+    <div class="team-info">
+        <h2 class="external-subtitles montserrat-font">WANDIA CHIURI</h2>
+        <span style="font-size:13px; display:block; margin:0 0 12px; line-height:15px;">Communications Gal</span>
+        <span class="snippet">Digital media and brand engagement makes Wandia's life full of awesomeness.</span>
             <div class="small-social">
-                <a href="#"><img src="images/twitter-small.png" alt=""></a>       
+                <a href="https://twitter.com/Wandia_Info"><img src="images/twitter-small.png" alt=""></a>       
             </div>
     </div>
 </div>
+
 <div class="clear"></div>
 
 <div class="one_half team">
     <div class="team-pic"><span class="tweet"></span><img src="images/mark.jpg" alt=""></div>
     <div class="team-info">
         <h2 class="external-subtitles montserrat-font">MARK MAO</h2>
-        <span style="font-size:13px; display:block; margin:0 0 12px; line-height:15px;">Co-founder & Creative Director</span>
-        <span class="snippet">Place a sentence here to add personality and fun to this section, here's a little more.</span>
-            <div class="small-social">
-                <a href="#"><img src="images/twitter-small.png" alt=""></a>       
-            </div>
+        <span style="font-size:13px; display:block; margin:0 0 12px; line-height:15px;">Sponsorship Dude</span>
+        <span class="snippet">Unlike other IP lawyers, we actually like Mark.</span>
+
     </div>
 </div>
 <div class="one_half team last">
     <div class="team-pic"><span class="tweet"></span><img src="images/lindsey.jpg" alt=""></div>
     <div class="team-info">
         <h2 class="external-subtitles montserrat-font">LINDSEY OH</h2>
-        <span style="font-size:13px; display:block; margin:0 0 12px; line-height:15px;">Co-founder & Creative Director</span>
-        <span class="snippet">Place a sentence here to add personality and fun to this section, here's a little more.</span>
+        <span style="font-size:13px; display:block; margin:0 0 12px; line-height:15px;">Volunteer for Volunteers</span>
+        <span class="snippet">Lindsey helps EdTech products develop so that students learn better.</span>
             <div class="small-social">
-                <a href="#"><img src="images/twitter-small.png" alt=""></a>       
+                <a href=" http://www.twitter.com/lindsey_oh"><img src="images/twitter-small.png" alt=""></a>       
             </div>
     </div>
 </div>
 <div class="clear"></div>
 
 <div class="one_half team">
-    <div class="team-pic"><span class="tweet"></span><img src="images/roberto.jpg" alt=""></div>
-    <div class="team-info">
-        <h2 class="external-subtitles montserrat-font">EUGENE MIN</h2>
-        <span style="font-size:13px; display:block; margin:0 0 12px; line-height:15px;">Co-founder & Creative Director</span>
-        <span class="snippet">Place a sentence here to add personality and fun to this section, here's a little more.</span>
-            <div class="small-social">
-                <a href="#"><img src="images/twitter-small.png" alt=""></a>       
-            </div>
-    </div>
-</div>
-<div class="one_half team last">
-    <div class="team-pic"><span class="tweet"></span><img src="images/roberto.jpg" alt=""></div>
+    <div class="team-pic"><span class="tweet"></span><img src="images/rick.jpg" alt=""></div>
     <div class="team-info">
         <h2 class="external-subtitles montserrat-font">RICK LAPOINTE</h2>
-        <span style="font-size:13px; display:block; margin:0 0 12px; line-height:15px;">Co-founder & Creative Director</span>
-        <span class="snippet">Place a sentence here to add personality and fun to this section, here's a little more.</span>
+        <span style="font-size:13px; display:block; margin:0 0 12px; line-height:15px;">Operations Guru</span>
+        <span class="snippet">Rick geeks out on big data for Facebook and protects the ELEO Team with his Krav Maga training.</span>
             <div class="small-social">
-                <a href="#"><img src="images/twitter-small.png" alt=""></a>       
+                <a href="http://www.twitter.com/ricklapointe"><img src="images/twitter-small.png" alt=""></a>       
             </div>
     </div>
 </div>
 <div class="clear"></div>
 
--->
 
+<!--
 
 <div class="one_fourth">
     <img src="images/roberto.jpg">
@@ -726,19 +712,7 @@
     <span style="font-size:13px;">Communications</br><a style="color:#4abd92; text-decoration:none;" href="https://twitter.com/wandia_info"><b>@wandia_info</b></a></span>
 </div>
 <div class="clear"></div>
-
-<!--
-<div class="one_fourth">
-    <img src="images/adrienne.jpg">
-    <h2 class="external-subtitles montserrat-font">EUGENE MIN</h2>
-    <span style="font-size:13px;">Something Cool</br><a style="color:#4abd92; text-decoration:none;" href="https://twitter.com/shenventure"><b>@shenventure</b></a></span>
-</div>
-<div class="one_fourth">
-    <img src="images/mark.jpg">
-    <h2 class="external-subtitles montserrat-font">RICK LAPOINTE</h2>
-    <span style="font-size:13px;">Something Cool</br></span>
-</div>
-<div class="clear"></div>  -->    
+ -->
 </div>  
 
 </div>  
