--- a/twitter.html
+++ b/twitter.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>Victor Ho : ELEO Conference</title>
+    <title>Share on Twitter : ELEO Conference</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="description" content="ELEO Conference - Inspiring and Equipping Entrepreneurs to Lead" />
     <meta name="keywords" content="leadership, entrepreneur, silicon valley, san jose, conference, yahoo, facebook, google, vc, community, meetup" />
@@ -35,26 +35,8 @@
             <!--Single Post-->
             <div class="clear block">	
                 <div class="block content-960 center-relative">
-                <a href="index.html#speakers"><img src="images/x.png" class="close-x"></a>
-                <div class=" top-50 bottom-20" style="text-align:right;"><a href="david-lane.html" class="button green slow-scroll"><</a><a href="tim-howes.html" class="button green slow-scroll" style="border-left:none;">></a></div>
 
-                    <div class="one_third">
-                        <img src="images/victor-ho.jpg" alt="" />
-                        <h1 class="single-blog-title montserrat-font top-20">VICTOR HO</h1>
-                        <ul class="date-author-likes-holder bottom-50"><li class="date">Founder & CEO, Fivestars</li></ul> 
-                        
-                    </div>
-
-                    <div class="two_third last bottom-100" style="font-weight:normal;">                        
-                    Victor Ho is the CEO and co-founder of FiveStars, the largest loyalty program for local businesses in the US. FiveStars originally launched out of Y Combinator’s Winter 2011 class, and has raised $19 million in outside funding.
-                    <br/>
-                    <br/>
-                    Prior to starting FiveStars, Victor was an investment banker at Goldman Sachs within the Financial Institutions Group. He then joined McKinsey & Company as a management consultant in New York. At McKinsey, Victor helped build out loyalty programs and managed customer retention programs for Fortune 500 companies.
-                    <br/>
-                    <br/>
-                    Victor holds three degrees from the University of California, Berkeley, where he tripled majored in Industrial Engineering, Rhetoric and Business Administration. In 2012, he was named to Fortune's "30 Under 30 in Technology". Victor has an insatiable love for sour candy and can solve a Rubik's cube in 45 seconds.
-                    </div>
-                </div>
+<iframe src="http://on.fb.me/1nV9V6e" frameborder="0"width="500" height="600" marginwidth="5" marginheight="5" ></iframe>
 
             </div>
             <div class="clear"></div>
@@ -80,7 +62,7 @@
             <script type="text/javascript" src="js/jquery.vticker-min.js"></script>
             <script type="text/javascript" src="php/scriptsData.php"></script>
             <script type="text/javascript" src="js/jquery.prettyPhoto.js"></script>		
-            <script type="text/javascript" src="js/main.js"></script>	
+            <script type="text/javascript" src="js/main.js"></script>
 
             <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -91,6 +73,6 @@
   ga('create', 'UA-51481476-1', 'eleoconference.com');
   ga('send', 'pageview');
 
-</script>	
+</script>		
         </body>
         </html>
