changes to the nav bar

--- a/index.html
+++ b/index.html
@@ -41,20 +41,35 @@
                 <!--Navigation Menu-->
                 <div id="main-menu" class="main-menu" style="display:none;">        
                     <div class="center-relative menu-holder">
-                        <div class="menu-logo left"><img src="images/eleo-logo.png" alt="Sensa"/></div>
-                        <span class="year">2014</span>
+                        <div class="menu-logo left"><img src="images/eleo-logo.png" alt="Sensa" style="float:left;" /><span class="year">2014</span></div>
                         <ul class="right montserrat-font">
                             <li><a href="#about">ABOUT</a></li>
                             <li><a href="#speakers">SPEAKERS</a></li>
                             <li><a href="#watsi">CHARITY</a></li>
                             <li><a href="#flow">AGENDA</a></li>                    
                             <li><a href="#team">TEAM</a></li>
-                            <!--<li><a href="#faq">FAQ</a></li>-->
                             <li><a href="#register" style="color:#4abd92;">REGISTER NOW</a></li>
                         </ul>
                         <div class="clear"></div>
                     </div>      
                 </div>
+
+                <!--
+        <div id="main-menu" class="main-menu">      
+            <div class="center-relative menu-holder">
+                <div class="menu-logo left"><img src="images/menu_logo.png" alt="Sensa"/></div>
+                <ul class="right montserrat-font">
+                    <li class="active"><a href="#dry-home">HELLO</a></li>
+                    <li><a href="#services">SERVICES</a></li>
+                    <li><a href="#portfolio">FOLIO</a></li>                    
+                    <li><a href="#about">ABOUT</a></li>
+                    <li><a href="#blog">BLOG</a></li>
+                    <li><a href="#contact">CONTACT</a></li>
+                    <li><a href="external.html">FEATURES</a></li>
+                </ul>
+                <div class="clear"></div>
+            </div>      
+        </div>-->
 
                 <!--Home-->
                 <div id="dry-home" class="home section relative" style="background:url('images/header_image_04.jpg') left top no-repeat; background-size:cover;">                       
