--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
             <p class="info bottom-20" style="color:white;">ELEO will donate all proceeds to third world medical treatments via Watsi </p>       
 
             <div class="one_half" style="color:white;">
-                Watsi is a global crowdfunding platform for healthcare that enables anyone to donate as little as $5 to directly fund life-changing medical care for people in need. 100% of every donation funds medical care and they are dedicated to complete transparency. ELEO is partnering with Watsi to donate all proceeds from the conference to funding third world medical treatments.
+                Watsi is a global crowdfunding platform for healthcare that enables anyone to donate as little as $5 to directly fund life-changing medical care for people in need. 100% of every donation funds medical care and they are dedicated to complete transparency. ELEO is partnering with Watsi to donate all proceeds from the conference to fund life-changing healthcare for people around the world.
                 <div class="top-20">
                     <a href="http://watsi.org" target="_blank" class="button green slow-scroll">watsi.org</a>
                 </div>               
