--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
                     <img src="images/eventbrite.png" style="margin:25px 0 -25px 0;">
                 </div>
             </div>
-          <a target="_top" href="#eventbrite"  class="tickets-button green" rel="prettyPhoto">Buy Tickets</a>
+          <a href="https://eleoconference.eventbrite.com"  class="tickets-button green">Buy Tickets</a>
         </div>      
         <div class="one_half last top-80">
             <p style="font-size:1.6em;">Saturday, July 26, 2014</p>
@@ -485,7 +485,7 @@
       <div class="clear"></div>
 
       <!--START OF EVENTBRITE TICKET PAGE HTML -->
-      <div id="eventbrite" class="hide" style="width:100%; text-align:left; display:none" >
+      <!--<div id="eventbrite" class="hide" style="width:100%; text-align:left; display:none" >
         <iframe  src="https://www.eventbrite.com/tickets-external?eid=7644098705&ref=etckt" frameborder="0" height="260" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true">
         </iframe>
         <div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" >
@@ -494,7 +494,7 @@
             <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com?ref=etckt">Eventbrite</a>
         </div>
         </div>
-    </div>
+    </div>-->
     <!--END OF EVENTBRITE TICKET PAGE-->         
 
 </div>
