minor change to team section

--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
         <span style="font-size:13px; display:block; margin:0 0 12px; line-height:15px;">Co-founder & Creative Director</span>
         <span class="snippet">Gains +10 in charisma with his beard while he helps lead mobile design at Yahoo.</span>
             <div class="small-social">
-                <a href="#"><img src="images/twitter-small.png" alt=""></a>       
+                <a href="https://twitter.com/robertoortiz"><img src="images/twitter-small.png" alt=""></a>       
             </div>
     </div>
 </div>
@@ -669,54 +669,6 @@
 </div>
 <div class="clear"></div>
 
-
-<!--
-
-<div class="one_fourth">
-    <img src="images/roberto.jpg">
-    <h2 class="external-subtitles montserrat-font">ROBERTO ORTIZ</h2>
-    <span style="font-size:13px;">Co-founder & Creative Director</span>
-    <a style="color:#4abd92; text-decoration:none; font-size:13px;" href="https://twitter.com/robertoortiz"><b>@robertoortiz</b></a>
-
-</div>
-<div class="one_fourth">
-    <img src="images/jerry.jpg">
-    <h2 class="external-subtitles montserrat-font">JERRY SHEN</h2>
-    <span style="font-size:13px;">Co-founder & Coordinator</br><a style="color:#4abd92; text-decoration:none;" href="https://twitter.com/bignoggins"><b>@bignoggins</b></a></span>
-</div>
-<div class="one_fourth">
-    <img src="images/charlena.jpg">
-    <h2 class="external-subtitles montserrat-font">CHARLENA ORTIZ</h2>
-    <span style="font-size:13px;">Co-founder & Coordinator</br><a style="color:#4abd92; text-decoration:none;" href="https://twitter.com/charlenaortiz"><b>@charlenaortiz</b></a></span>
-</div>
-<div class="one_fourth last">
-    <img src="images/mike.jpg">
-    <h2 class="external-subtitles montserrat-font">MIKE LOUIE</h2>
-    <span style="font-size:13px;">Marketing Director</br><a style="color:#4abd92; text-decoration:none;" href="https://twitter.com/mewie"><b>@Mewie</b></a></span>
-</div>
-<div class="clear"></div>
-<div class="one_fourth">
-    <img src="images/lindsey.jpg">
-    <h2 class="external-subtitles montserrat-font">LINDSEY OH</h2>
-    <span style="font-size:13px;">Volunteer Coordinator</br></span>
-</div>  
-<div class="one_fourth">
-    <img src="images/adrienne.jpg">
-    <h2 class="external-subtitles montserrat-font">ADRIENNE SHEN</h2>
-    <span style="font-size:13px;">ELEO MC</br><a style="color:#4abd92; text-decoration:none;" href="https://twitter.com/shenventure"><b>@Shenventure</b></a></span>
-</div>
-<div class="one_fourth">
-    <img src="images/mark.jpg">
-    <h2 class="external-subtitles montserrat-font">MARK MAO</h2>
-    <span style="font-size:13px;">Sponsorships</br></span>
-</div>
-<div class="one_fourth last">
-    <img src="images/wandia.jpg">
-    <h2 class="external-subtitles montserrat-font">WANDIA CHIURI</h2>
-    <span style="font-size:13px;">Communications</br><a style="color:#4abd92; text-decoration:none;" href="https://twitter.com/wandia_info"><b>@wandia_info</b></a></span>
-</div>
-<div class="clear"></div>
- -->
 </div>  
 
 </div>  
