fix speaker formatting for speakers with multiple titles

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                 </li>
                 </ul>
                 <h1 class="single-blog-title montserrat-font top-20">BRAD LOMENICK</h1>
-                <ul class="date-author-likes-holder bottom-20"><li class="date">Former President, Catalyst; Author, The Catalyst Leader</li></ul>
+                <ul class="date-author-likes-holder bottom-20"><li class="date">Former President, Catalyst<br/>Author, The Catalyst Leader</li></ul>
                 Brad Lomenick is the founder of Catalyst Conference, one of the largest leadership conferences in the world. He has a passion for connecting leaders and starting movements. <a href="brad-lomenick.html">Learn More</a>
             </div>
             <div class="one_half last">
@@ -283,7 +283,7 @@
                 </li>
                 </ul>
                 <h1 class="single-blog-title montserrat-font top-20">TIM HOWES</h1>
-                <ul class="date-author-likes-holder bottom-20"><li class="date">Founder & CTO, Rockmelt; VP of Engineering, Yahoo!</li></ul>
+                <ul class="date-author-likes-holder bottom-20"><li class="date">Founder & CTO, Rockmelt<br/>VP of Engineering, Yahoo!</li></ul>
                 Tim is an entrepreneur and computer scientist. His last company, Rockmelt, was purchased by Yahoo, where Tim is currently VP of Engineering for Mobile and Emerging Products. <a href="tim-howes.html">Learn More</a>
             </div>
 
