--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
     <div class="team-info">
         <h2 class="external-subtitles montserrat-font">JERRY SHEN</h2>
         <span style="font-size:13px; display:block; margin:0 0 12px; line-height:15px;">Co-founder</span>
-        <span class="snippet">Jerry's company was acquired last year and now (legally) hacks Yahoo Fantasy Sports Apps.</span>
+        <span class="snippet">Jerry's company was acquired last year and he now (legally) hacks on Yahoo Fantasy Sports Apps.</span>
             <div class="small-social">
                 <a href="https://twitter.com/bignoggins"><img src="images/twitter-small.png" alt=""></a>       
             </div>
