--- a/index.html
+++ b/index.html
@@ -309,15 +309,23 @@
     <!--WATSI-->
     <div id="watsi" class="clear about section block">
         <div class="block content-960 center-relative"> 
+
+            <div class="one_half">
             <h2 class="section-title montserrat-font" style="color:white;">GIVING</br>BACK</h2>
             <div class="title-separator"></div>                     
-            <p class="info bottom-20" style="color:white;">ELEO will donate all proceeds to third world medical treatments via Watsi </p>       
-
+            </div>
+            <div class="one_half last">
+            <a href="http://watsi.org"><img src="images/watsi-logo.png" class="watsi-logo" style="border:none;"></a>
+            </div>
+            <div class="clear"></div>
             <div class="one_half" style="color:white;">
+                        <p class="info bottom-20" style="color:white;">ELEO will donate all proceeds to third world medical treatments via Watsi </p>       
+
                 Watsi is a global crowdfunding platform for healthcare that enables anyone to donate as little as $5 to directly fund life-changing medical care for people in need. 100% of every donation funds medical care and they are dedicated to complete transparency. ELEO is partnering with Watsi to donate all proceeds from the conference to fund life-changing healthcare for people around the world.
-                <div class="top-20">
+                <!--<div class="top-20">
                     <a href="http://watsi.org" target="_blank" class="button green slow-scroll">watsi.org</a>
-                </div>               
+                </div> -->
+                <br /><br />             
             </div>
 
 
