update share link for twitter

--- a/confirmation.html
+++ b/confirmation.html
@@ -45,7 +45,7 @@
                 <h1 class="single-blog-title montserrat-font top-50">TELL A FRIEND</h1>
                             <ul class="date-author-likes-holder bottom-20"><li class="date">Would one of your friends love to learn more about leadership and entreprenuership? Then invite them to join us:</li></ul>
                             <div>
-                                <a href="http://twitter.com/share?text=@ELEO 2014: Learn from entrepreneurs, CEOs and VCs about what it takes to lead a company.&url=http://eleoconference.com&hashtags=eleo2014,startups" target="_blank" class="button">Share on Twitter</a>
+                                <a href="http://twitter.com/share?text=.@ELEO 2014: Learn from entrepreneurs, CEOs and VCs about what it takes to lead a company.&url=http://eleoconference.com&hashtags=eleo2014,startups" target="_blank" class="button">Share on Twitter</a>
                                 <a href="https://www.facebook.com/sharer/sharer.php?u=eleoconference.com" target="_blank" class="button">Share on Facebook</a>
                             </div> 
 
